paragraph text changed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <p style="padding: 2%; text-align: justify;">
         This special time of year reminds us of the beauty of giving, sharing, and connecting with those who matter most. May your Christmas be filled with delicious feasts, heartfelt conversations, and the magic of togetherness. Let this holiday season be a chance to reflect on the blessings of the past year and step into the new one with hope and excitement.
     <p style="padding: 2%; text-align: justify;">
-        From all of us at [Your Company/Team Name], we extend our heartfelt wishes for a season that brings you endless happiness and peace. Thank you for being a part of our story, and we look forward to continuing this journey with you in the year ahead. Wishing you a holiday season filled with warmth, wonder, and love.
+        From all of us at Cloudly.io, we extend our heartfelt wishes for a season that brings you endless happiness and peace. Thank you for being a part of our story, and we look forward to continuing this journey with you in the year ahead. Wishing you a holiday season filled with warmth, wonder, and love.
     </p>
     <div style="float: right; margin: 0 2% 4% 0;">
         <a href="https://www.history.com/topics/christmas/history-of-christmas" target="_blank" style="float: right; border-radius: 8px; color: #fff; font-size: 17px; background-color: #FF6B57; padding: 8px; text-decoration: none;">Learn More</a>
